--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ section {
   text-align: center;
   width: 80%;
   border-radius: 25px 25px 25px 25px;
-  padding: 10%;
+  margin: 10%;
 }
 
 .cargando {
