--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ section {
   justify-content: center;
   align-content: center;
   text-align: center;
-  margin: 20%;
+  margin-left: 10%;
 }
 
 .cargando {
